# cocos2d-x-3rd-party-libs-bin

./: .gitignore  .gitmodules  CMakeLists.txt  CocosExternalConfig.cmake  version.json
Box2D/: .gitignore  CMakeLists.txt
Box2D/Dynamics/: b2Body.h
Box2D/proj-win10/: libbox2d.vcxproj
Box2D/proj.win32/: Box2D.vcxproj  libbox2d.vcxproj
Box2D/proj.win8.1-universal/libbox2d.Windows/: libbox2d.Windows.vcxproj
Box2D/proj.win8.1-universal/libbox2d.WindowsPhone/: libbox2d.WindowsPhone.vcxproj
Box2D/proj.wp8/: Box2D.vcxproj
ConvertUTF/: ConvertUTFWrapper.cpp
MP3Decoder/: CMakeLists.txt
OggDecoder/: CMakeLists.txt
OpenalSoft/: CMakeLists.txt
android/: Android.mk
android-specific/: README.md
android-specific/MP3Decoder/prebuilt/: Android.mk
android-specific/OggDecoder/prebuilt/: Android.mk
android-specific/OpenalSoft/prebuilt/: Android.mk
android-specific/cpufeatures/: CMakeLists.txt
android-specific/pvmp3dec/: CMakeLists.txt
android-specific/tremolo/: CMakeLists.txt
android/libs/: Android.mk
bullet/: Android.mk  CMakeLists.txt
bullet/BulletCollision/CollisionShapes/: btConvexHullShape.cpp  btConvexHullShape.h
bullet/BulletMultiThreaded/: PlatformDefinitions.h  Win32ThreadSupport.cpp  btParallelConstraintSolver.h
bullet/BulletMultiThreaded/SpuSampleTask/: SpuSampleTask.cpp
bullet/LinearMath/: btScalar.h
bullet/prebuilt/android/: Android.mk
bullet/proj.win10/: libbullet.vcxproj
bullet/proj.win32/: libbullet.vcxproj
bullet/proj.win8.1-universal/libbullet.Shared/: libbullet.Shared.vcxitems  libbullet.Shared.vcxitems.filters
bullet/proj.win8.1-universal/libbullet.Windows/: libbullet.Windows.vcxproj
bullet/proj.win8.1-universal/libbullet.WindowsPhone/: libbullet.WindowsPhone.vcxproj
chipmunk/: CMakeLists.txt
chipmunk/include/chipmunk/: chipmunk.h  chipmunk_private.h
chipmunk/prebuilt/android/: Android.mk
chipmunk/proj.win32/: chipmunk.vcxproj
clipper/: clipper.cpp  clipper.h
cmake/: CocosExternalConfig.cmake
curl/: CMakeLists.txt
curl/include/android/curl/: curlbuild.h
curl/include/ios/curl/: curlbuild.h
curl/include/mac/curl/: curlbuild.h
curl/prebuilt/android/: Android.mk
curl/prebuilt/win10/arm/: libcurl.lib
curl/prebuilt/win10/win32/: libcurl.lib
curl/prebuilt/win10/x64/: libcurl.lib
curl/prebuilt/win32/: libcurl_a.lib  libcurl_imp.lib
curl/prebuilt/winrt_8.1/arm/: libcurl.lib
curl/prebuilt/winrt_8.1/win32/: libcurl.lib
curl/prebuilt/wp8/arm/: libcurl.lib
curl/prebuilt/wp8/win32/: libcurl.lib
curl/prebuilt/wp_8.1/arm/: libcurl.lib
curl/prebuilt/wp_8.1/win32/: libcurl.lib
fbx-conv/mac/: fbx-conv
flatbuffers/: Android.mk  CMakeLists.txt  idl_parser.cpp  util.h
freetype2/: CMakeLists.txt
freetype2/prebuilt/win32/: freetype250.lib
glfw3/: CMakeLists.txt
glsl-optimizer/: CMakeLists.txt
jpeg/: CCModuleJPEG.cpp  CCModuleJPEG.h  CMakeLists.txt
jpeg/prebuilt/android/: Android.mk
jpeg/prebuilt/win32/: libjpeg.lib
json/: document.h
linux-specific/fmod/: CMakeLists.txt
lua/lua/: CMakeLists.txt  loadlib.c  lobject.c
lua/luajit/: CMakeLists.txt  build_ios.sh  build_win32.bat
lua/luajit/include/: luaconf.h
lua/luasocket/: CMakeLists.txt
lua/quick/: LuaEventNode.cpp  LuaNodeManager.h  LuaTouchEventManager.cpp  LuaTouchEventManager.h  LuaTouchTargetNode.cpp  lua_cocos2dx_quick_manual.cpp
lua/tolua/: CMakeLists.txt  tolua++.h  tolua_event.c  tolua_map.c  tolua_to.c
openssl/: CMakeLists.txt
openssl/prebuilt/android/: Android.mk
png/: CMakeLists.txt
png/prebuilt/win32/: libpng.lib
protobuf-lite/: Android.mk
rapidxml/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_sax3.hpp  rapidxml_utils.hpp
recast/: Android.mk  CMakeLists.txt
recast/DetourCrowd/: DetourCrowd.cpp  DetourCrowd.h
recast/proj.win10/: librecast.vcxproj
recast/proj.win32/: librecast.vcxproj  librecast.vcxproj.filters
recast/proj.win8.1-universal/librecast.Windows/: librecast.Windows.vcxproj
recast/proj.win8.1-universal/librecast.WindowsPhone/: librecast.WindowsPhone.vcxproj
spidermonkey/: CMakeLists.txt
spidermonkey/prebuilt/android/: Android.mk
sqlite3/: CMakeLists.txt
sqlite3/libraries/win10/arm/: sqlite3.lib
sqlite3/libraries/win10/win32/: sqlite3.lib
sqlite3/libraries/win10/x64/: sqlite3.lib
sqlite3/libraries/winrt_8.1/arm/: sqlite3.lib
sqlite3/libraries/winrt_8.1/win32/: sqlite3.lib
sqlite3/libraries/wp_8.1/arm/: sqlite3.lib
sqlite3/libraries/wp_8.1/win32/: sqlite3.lib
tiff/: CCModuleTIFF.cpp  CCModuleTIFF.h  CMakeLists.txt
tinyxml2/: CMakeLists.txt  tinyxml2.h
tremolo/: Android.mk
unzip/: CMakeLists.txt  crypt.h  ioapi.cpp  ioapi.h  ioapi_mem.cpp  unzip.cpp  unzip.h
uv/: CMakeLists.txt
uv/prebuilt/win10/arm/: uv_a.lib
uv/prebuilt/win10/i386/: uv_a.lib
uv/prebuilt/win10/x64/: uv_a.lib
uv/win32/prebuilt/: libuv.lib
webp/: CCModuleWEBP.cpp  CCModuleWEBP.h  CMakeLists.txt
websockets/: CMakeLists.txt
websockets/include/android/: lws_config.h
websockets/include/android/openssl/: opensslconf.h
websockets/include/ios/: lws_config.h
websockets/include/ios/openssl/: opensslconf.h
websockets/include/mac/: libwebsockets.h  lws_config.h
websockets/include/win10/: lws_config.h
websockets/include/win32/: lws_config.h
websockets/include/winrt_8.1/: private-libwebsockets.h
websockets/prebuilt/android/: Android.mk
websockets/prebuilt/win10/arm/: libwebsockets.lib
websockets/prebuilt/win10/win32/: libwebsockets.lib
websockets/prebuilt/win10/x64/: websockets.lib
websockets/prebuilt/win32/: websockets.lib  websockets_static.lib
websockets/prebuilt/winrt_8.1/arm/: libwebsockets.lib
websockets/prebuilt/winrt_8.1/win32/: libwebsockets.lib
websockets/prebuilt/wp8/arm/: libwebsockets.lib
websockets/prebuilt/wp8/win32/: libwebsockets.lib
win32-specific/MP3Decoder/: CMakeLists.txt
win32-specific/OggDecoder/: CMakeLists.txt
win32-specific/OpenalSoft/: CMakeLists.txt
win32-specific/gles/: CMakeLists.txt
win32-specific/icon/: CMakeLists.txt
win32/libs/: lua51.lib
xxhash/: CMakeLists.txt
zlib/: CMakeLists.txt
(+292 files in other folders)
